// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds repost views fetches reposted-by for a post 1`] = `
Array [
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "did": "user(0)",
    "handle": "eve.test",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "chat": Object {
        "allowIncoming": "none",
      },
    },
    "did": "user(1)",
    "handle": "dan.test",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "following": "record(0)",
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "did": "user(2)",
    "handle": "carol.test",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "followedBy": "record(2)",
      "following": "record(1)",
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "hi im bob label_me",
    "did": "user(3)",
    "displayName": "bobby",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "followedBy": "record(4)",
      "following": "record(3)",
      "muted": false,
    },
  },
]
`;

exports[`pds repost views fetches reposted-by for a reply 1`] = `
Array [
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "did": "user(0)",
    "handle": "eve.test",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "chat": Object {
        "allowIncoming": "none",
      },
    },
    "did": "user(1)",
    "handle": "dan.test",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "following": "record(0)",
      "muted": false,
    },
  },
]
`;
